syntax = "proto3";

option go_package = "github.com/0glabs/0g-data-avail/api/grpc/retriever";

package retriever;

// The Retriever is a service for retrieving chunks corresponding to a blob from
// the ZGDA operator nodes and reconstructing the original blob from the chunks.
// This is a client-side library that the users are supposed to operationalize.
//
// Note: Users generally have two ways to retrieve a blob from ZGDA:
//   1) Retrieve from the Disperser that the user initially used for dispersal: the API
//      is Disperser.RetrieveBlob() as defined in api/proto/disperser/disperser.proto
//   2) Retrieve directly from the ZGDA Nodes, which is supported by this Retriever.
//
// The Disperser.RetrieveBlob() (the 1st approach) is generally faster and cheaper as the
// Disperser manages the blobs that it has processed, whereas the Retriever.RetrieveBlob()
// (the 2nd approach here) removes the need to trust the Disperser, with the downside of
// worse cost and performance.
service Retriever {
	// This fans out request to ZGDA Nodes to retrieve the chunks and returns the
	// reconstructed original blob in response.
	rpc RetrieveBlob(BlobRequest) returns (BlobReply) {}
}

message BlobRequest {
	// The hash of data
	bytes storage_root = 1;
	// This identifies the epoch that this blob belongs to.
	uint64 epoch = 2;
	// Which quorum of the blob this is requesting for (note a blob can participate in
	// multiple quorums).
	uint64 quorum_id = 3;
}

message BlobReply {
	// The blob retrieved and reconstructed from the ZGDA Nodes per BlobRequest.
	bytes data = 1;
}
